<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_categories" />
    <item
        android:id="@+id/nav_inventory"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/nav_inventory" />
    <item
        android:id="@+id/nav_distribution"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/nav_distribution" />
    <item
        android:id="@+id/nav_returns"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/nav_returns" />
</menu>
